--- a/install
+++ b/install
@@ -8,7 +8,7 @@ cp -r global/.zshrc ~/
 # Android Termux
 if echo $HOME | grep -q "/data/data/com.termux"; then
   apt update
-  apt install -y zsh nodejs git gpg gh golang neovim wget curl neofetch jq clang make htop unzip zip tsu screen
+  apt install -y zsh nodejs git gnupg gh golang neovim wget curl neofetch jq clang make htop unzip zip tsu screen
   cp -rf linux/.termux ~/
   cp -rf linux/neofetch ~/.config/
 
@@ -22,16 +22,14 @@ elif [[ $OSTYPE == "linux-gnu" ]]; then
 # End
 fi
 
-if [[ -d "~/.oh-my-zsh/" ]]; then
+if [[ ! -d "~/.oh-my-zsh/" ]]; then
   chsh -s $(which zsh)||('export SHELL=`which zsh`'; echo '[ -z "$ZSH_VERSION" ] && exec "$SHELL" -l') > ~/.bashrc
   yes | sh -c "$(curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
-else
-  omz update
 fi
 
-if [[ -d "~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting" ]];then
+if [[ ! -d "~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting" ]];then
   git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting
 fi
-if [[ -d "~/.oh-my-zsh/custom/plugins/zsh-autosuggestions" ]];then
+if [[ ! -d "~/.oh-my-zsh/custom/plugins/zsh-autosuggestions" ]];then
   git clone https://github.com/zsh-users/zsh-autosuggestions ~/.oh-my-zsh/custom/plugins/zsh-autosuggestions
 fi
