--- a/install
+++ b/install
@@ -2,34 +2,34 @@
 set -x
 
 # Install globaly files
-cp -r global/.config ~/
-cp -r global/.zshrc ~/
+cp -r global/.config $HOME/
+cp -r global/.zshrc $HOME/
 
 # Android Termux
 if echo $HOME | grep -q "/data/data/com.termux"; then
   apt update
   apt install -y zsh nodejs git gnupg gh golang neovim wget curl neofetch jq clang make htop unzip zip tsu screen
-  cp -rf linux/.termux ~/
-  cp -rf linux/neofetch ~/.config/
+  cp -rf linux/.termux $HOME/
+  cp -rf linux/neofetch $HOME/.config/
 
 # Gnu/Linux
 elif [[ $OSTYPE == "linux-gnu" ]]; then
   sudo apt update
   sudo apt install -y neovim git zsh wget curl neofetch jq clang make htop unzip zip  screen
   wget -qO- https://raw.githubusercontent.com/Sirherobrine23/DebianNodejsFiles/main/debianInstall.sh | sudo bash
-  cp -rf linux/neofetch ~/.config/
+  cp -rf linux/neofetch $HOME/.config/
 
 # End
 fi
 
-if [[ ! -d "~/.oh-my-zsh/" ]]; then
+if [[ ! -d "$HOME/.oh-my-zsh/" ]]; then
   alias chsh=""
   yes | sh -c "$(curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
 fi
 
-if [[ ! -d "~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting" ]];then
-  git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting
+if [[ ! -d "$HOME/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting" ]];then
+  git clone https://github.com/zsh-users/zsh-syntax-highlighting.git $HOME/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting
 fi
-if [[ ! -d "~/.oh-my-zsh/custom/plugins/zsh-autosuggestions" ]];then
-  git clone https://github.com/zsh-users/zsh-autosuggestions ~/.oh-my-zsh/custom/plugins/zsh-autosuggestions
+if [[ ! -d "$HOME/.oh-my-zsh/custom/plugins/zsh-autosuggestions" ]];then
+  git clone https://github.com/zsh-users/zsh-autosuggestions $HOME/.oh-my-zsh/custom/plugins/zsh-autosuggestions
 fi
